45407 fix(datasets):  fix date formatting, make add button icon-only on mobile, and shorten active sorting label

--- a/frontend/src/public/components/Datasets/DatasetDetails/DatasetDetails.css
+++ b/frontend/src/public/components/Datasets/DatasetDetails/DatasetDetails.css
@@ -11,6 +11,10 @@
     align-items: center;
     gap: 0.8rem;
   }
+
+  .add-btn {
+    @mixin details-header-btn;
+  }
 }
 
 .list {
@@ -46,9 +50,19 @@
     height: auto;
     border: 0;
   }
+}
 
-  .dataset__sorting-container {
-    padding-right: 0;
+.dataset__sorting-container {
+  padding-right: 0;
+
+  @media (--mobile) {
+    button {
+      justify-content: flex-end;
+
+      svg {
+        margin-left: 0;
+      }
+    }
   }
 }
 
